--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,18 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - ${DB_PORT_ADMIM:-8080}:80
+        environment:
+            - PMA_ARBITRARY=1
+            - PMA_HOST=mysql
+        networks:
+            - sail
+        depends_on:
+            - mysql
 networks:
     sail:
         driver: bridge
